modifi color title

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Location de voiture ancienne</title>
 </head>
 <body>
-	<p>Welcome to home page</p>
+	<p style="color: red">Welcome to home page</p>
 </body>
 </html>
